# home-ca

./: .gitignore  LICENSE  README.md  display-certificates.sh  pyproject.toml  requirements.in  requirements.txt  sample-config.yaml  validate-certificates.sh
home_ca/: __main__.py  certs.py  config.py
