[project]
name = "home-ca"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.3",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "mypy>=1.15.0",
    "pylint>=3.3.7",
    "types-pyyaml>=6.0.12.20250402",
]

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 2

[tool.pylint.FORMAT]
max-line-length = 120

[tool.mypy]
disallow_untyped_calls = true
